welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:5: error: not found: value Direction
    case Direction.EAST =>
         ^DwarfCode:8: error: not found: value Direction
        setDirection(Direction.WEST)
                     ^DwarfCode:13: error: not found: value Direction
    case Direction.WEST =>
         ^DwarfCode:16: error: not found: value Direction
				setDirection(Direction.EAST)
                                             ^